# rvmoura96.github.io

./: index.md  sobre.html
case-dp6/: analise.html  index.html  sobre.html
case/js/: tagueamento.js
integration-tests/: __init__.py  behave.ini  pyproject.toml  readme.md  requirements.txt
integration-tests/bdd/features/: environment.py  eventos_analise.feature  eventos_globais.feature  eventos_sobre.feature
integration-tests/bdd/features/steps/: eventos_analise.py  eventos_globais.py  eventos_sobre.py
integration-tests/bdd/helpers/: constants.py
integration-tests/bdd/modules/: auxiliar.py
mobday/: analise.html  index.html  sobre.html
mobday/js/: main.js
